@@ -189,3 +189,33 @@ zkTimeout=10000
 #Disk check interval in milli seconds, interval to check the ledger dirs usage.
 #Default is 10000
 #diskCheckInterval=10000
+
+# Interval at which the auditor will do a check of all ledgers in the cluster.
+# By default this runs once a week. The interval is set in seconds.
+# To disable the periodic check completely, set this to 0.
+# Note that periodic checking will put extra load on the cluster, so it should
+# not be run more frequently than once a day.
+#auditorPeriodicCheckInterval=604800
+
+# The interval between auditor bookie checks.
+# The auditor bookie check, checks ledger metadata to see which bookies should
+# contain entries for each ledger. If a bookie which should contain entries is
+# unavailable, then the ledger containing that entry is marked for recovery.
+# Setting this to 0 disabled the periodic check. Bookie checks will still
+# run when a bookie fails.
+# The interval is specified in seconds.
+#auditorPeriodicBookieCheckInterval=84600
+
+# number of threads that should handle write requests. if zero, the writes would
+# be handled by netty threads directly.
+# numAddWorkerThreads=1
+
+# number of threads that should handle read requests. if zero, the reads would
+# be handled by netty threads directly.
+# numReadWorkerThreads=1
+
+# The number of bytes we should use as capacity for BufferedReadChannel. Default is 512 bytes.
+# readBufferSizeBytes=512
+
+# The number of bytes used as capacity for the write buffer. Default is 64KB.
+# writeBufferSizeBytes=65536
